@@ -20,15 +20,16 @@ A Manduca WordPress sablon ezért beépített linkkezelő modullal rendelkezik, 
     <li><a href="/valami.pdf" >letölthető pdf fájl</a></li>
     <li><a href="/valami.epub"  >Digitális könyvre hivatkozás (epub) </a></li>
 </ul>
-<h3>Kimenő linkek</h3>
+<h3>Külső linkek</h3>
 <ul>
     <li><a href="https://akadálymentes-honlap.hu/" >Más weboldalra mutató link</a></li>
     <li>
 		<a href="//akadálymentes-honlap.hu" target="_blank">más weboldalra mutató link protokol (schema) nélkül. </a>
     </li>
     <li><a href="https://akadálymentes-honlap.hu/" target="_blank">más weboldalra mutató link, ha új ablakban nyílik meg</a>: az egeret fölé helyezve megjelenik egy szöveg. A képernyőolvasókat is tájékoztatja arról. hogy új lap nyílik meg a böngészőben. .</li>
-    <li><a href="https://goo.gl/maps/D81TogKuxKC2" >Google térképre mutató link</a></li>
+    <li><a href="http://www.xn--akadlymentes-wordpress-sablon-jnc.hu/wp-content/uploads/2018/07/Ki-tanúsíthatja-a-weblapok-akadálymentességét.pdf" >Külső pdf link</a></li>
     <li><a href="www.akadálymentes-honlap.hu"> protocol nélküli link</a></li>
+    <li><a href="/valami.pdf" >letölthető pdf fájl</a></li>
     <li><a href="www.akadálymentes-honlap.hu" target="_blank" > protocol nélküli link új ablakban</a></li>
 </ul>
 <h3>Relatív url-ek. </h3>
